Update to Spring boot 4, readme update